@@ -1,4 +1,4 @@
-.\"	$NetBSD: racoon.conf.5,v 1.50 2008/12/23 19:28:18 wiz Exp $
+.\"	$NetBSD: racoon.conf.5,v 1.51 2009/01/05 06:03:58 tteras Exp $
 .\"
 .\"	Id: racoon.conf.5,v 1.54 2006/08/22 18:17:17 manubsd Exp
 .\"
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd December 23, 2008
+.Dd January 5, 2009
 .Dt RACOON.CONF 5
 .Os
 .\"
@@ -921,17 +921,6 @@ command.
 .El
 .El
 .\"
-.Ss Policy Specifications
-The policy directive is obsolete, policies are now in the SPD.
-.Xr racoon 8
-will obey the policy configured into the kernel by
-.Xr setkey 8 ,
-and will construct phase 2 proposals by combining
-.Ic sainfo
-specifications in
-.Nm ,
-and policies in the kernel.
-.\"
 .Ss Sainfo Specifications
 .Bl -tag -width Ds -compact
 .It Xo
@@ -1076,7 +1065,7 @@ Defines the logging level.
 .Ar level
 is one of following:
 .Ic error , warning , notify , info , debug
-and
+or
 .Ic debug2 .
 The default is
 .Ic info .
